--- a/index.html
+++ b/index.html
@@ -1,28 +1,42 @@
+
 <!DOCTYPE html>
+
 <html lang="fr">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
+<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+<link rel="shortcut icon" href="/favicon.ico" />
+<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+<link rel="manifest" href="/site.webmanifest" />
+<title>Azénor – héroïne du roman Le Testament d’Azénor</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>Azénor – héroïne du roman Le Testament d’Azénor</title>
-  <meta name="description" content="Site officiel autour d’Azénor, héroïne du roman historique Le Testament d’Azénor d’Alain Bertrand.">
-  <link rel="canonical" href="https://azenor.org/">
-  <link rel="icon" href="/favicon.ico">
+<meta name="description"
+      content="Site officiel autour d’Azénor, héroïne du roman historique Le Testament d’Azénor d’Alain Bertrand.">
 
-  <!-- Open Graph -->
-  <meta property="og:locale" content="fr_FR">
-  <meta property="og:type" content="website">
-  <meta property="og:title" content="Azénor – Le Testament d’Azénor">
-  <meta property="og:description" content="Site officiel autour d’Azénor, héroïne du roman historique Le Testament d’Azénor d’Alain Bertrand.">
-  <meta property="og:url" content="https://azenor.org/">
-  <meta property="og:site_name" content="Le Testament d’Azénor">
+<!-- URL CANONIQUE (page FR) -->
+<link rel="canonical" href="https://azenor.org/">
 
-  <!-- Twitter -->
-  <meta name="twitter:card" content="summary">
-  <meta name="twitter:title" content="Azénor – Le Testament d’Azénor">
-  <meta name="twitter:description" content="Site officiel autour d’Azénor, héroïne du roman historique Le Testament d’Azénor d’Alain Bertrand.">
+<!-- HREFLANG -->
+<link rel="alternate" hreflang="fr" href="https://azenor.org/">
+<link rel="alternate" hreflang="en" href="https://azenor.org/en/">
+<link rel="alternate" hreflang="x-default" href="https://azenor.org/">
 
-  <style>
+<!-- OPEN GRAPH (WhatsApp / Facebook) -->
+<meta property="og:locale" content="fr_FR">
+<meta property="og:type" content="website">
+<meta property="og:title" content="Le Testament d’Azénor | Site officiel">
+<meta property="og:description"
+      content="Site officiel autour d’Azénor, héroïne du roman historique Le Testament d’Azénor d’Alain Bertrand.">
+<meta property="og:url" content="https://azenor.org/">
+<meta property="og:site_name" content="Le Testament d’Azénor">
+
+<!-- TWITTER / X -->
+<meta name="twitter:card" content="summary">
+<meta name="twitter:title" content="Le Testament d’Azénor | Site officiel">
+<meta name="twitter:description"
+      content="Site officiel autour d’Azénor, héroïne du roman historique Le Testament d’Azénor d’Alain Bertrand.">
+<style>
     :root{
       --accent:#f28c28;
       --fg:#f2f2f2;
@@ -102,7 +116,6 @@
     }
     @media(max-width:980px){ .hero{ grid-template-columns:1fr; } }
 
-    /* Cards only for text; NO frame around cover */
     .card{
       background:var(--card);
       border:1px solid var(--border);
@@ -110,18 +123,12 @@
       padding:18px;
       box-shadow:0 12px 30px rgba(0,0,0,.35);
     }
-    .cover-wrap{
-      background:transparent;
-      border:none;
-      box-shadow:none;
-      padding:0;
-    }
     .cover{
       width:100%;
       max-width:480px;
       display:block;
       margin:auto;
-      border-radius:0 !important;   /* IMPORTANT: no rounded corners */
+      border-radius:12px;
       box-shadow:0 16px 46px rgba(0,0,0,.60);
     }
     h1{
@@ -135,144 +142,449 @@
       font-size: 1.02rem;
       white-space: pre-wrap;
     }
-
-    /* Footer */
-    .site-footer{
-      background:#000;
-      margin-top:4rem;
-      padding:1.6rem 0;
-    }
-    .site-footer .footer-inner{
-      max-width:1200px;
-      margin:0 auto;
-      padding:0 1.5rem;
+    .actions{
+      margin-top:18px;
       display:flex;
-      justify-content:space-between;
-      align-items:center;
-      gap:16px;
+      gap:12px;
       flex-wrap:wrap;
     }
-    .social-icons .icon{
-      display:inline-flex;
-      align-items:center;
-      justify-content:center;
-      width:32px;
-      height:32px;
-      border-radius:50%;
-      border:1px solid #f28c28;
-      margin-right:0.5rem;
+    .btn{
+      padding:10px 16px;
+      border-radius:999px;
+      border:1px solid var(--accent);
+      background:rgba(242,140,40,.15);
+      font-weight:600;
     }
-    .social-icons svg{
-      width:16px;
-      height:16px;
-      fill:#f28c28;
+    .btn:hover{ background:rgba(242,140,40,.22); }
+    footer{
+      text-align:center;
+      padding:18px 18px 36px;
+      color:rgba(255,255,255,.55);
     }
-    .buy-btn{
-      background:linear-gradient(#3a3a3a, #1f1f1f);
-      color:#f28c28;
-      padding:0.55rem 1.2rem;
-      text-decoration:none;
-      font-weight:500;
-      border-radius:3px;
-      box-shadow:0 2px 4px rgba(0,0,0,0.6);
-      white-space:nowrap;
-    }
+  
 
-    /* Mobile: menu scrollable */
-    @media (max-width: 768px){
-      header .nav nav.menu{
-        flex-wrap: nowrap;
-        overflow-x: auto;
-        overflow-y: hidden;
-        -webkit-overflow-scrolling: touch;
-        white-space: nowrap;
-        gap: 8px;
-      }
-      header .nav nav.menu a{
-        flex: 0 0 auto;
-        white-space: nowrap;
-      }
-    }
-  </style>
+
+/* ===== Mobile: menu horizontal scrollable (iPhone) ===== */
+@media (max-width: 768px){
+  header .nav{
+    align-items: center;
+  }
+  header .nav nav.menu{
+    flex-wrap: nowrap;
+    overflow-x: auto;
+    overflow-y: hidden;
+    -webkit-overflow-scrolling: touch;
+    white-space: nowrap;
+    gap: 8px;
+  }
+  header .nav nav.menu a{
+    flex: 0 0 auto;
+    white-space: nowrap;
+  }
+}
+</style>
+<style>
+/* Remove rounded corners on cover image */
+.cover, .cover img, img.cover {
+  border-radius: 0 !important;
+}
+
+/* Improve menu button visibility */
+.menu a{
+  background: rgba(200,200,200,0.15);
+  padding: 0.35em 0.8em;
+  border-radius: 4px;
+}
+.menu a:hover{
+  background: rgba(200,200,200,0.25);
+}
+</style>
+<style>
+/* Micro-shadow on cover */
+.cover{
+  box-shadow: 0 10px 28px rgba(0,0,0,.45) !important;
+}
+
+/* Active menu button (current page) */
+.menu a[aria-current="page"], .menu a.active{
+  background: rgba(242,140,40,0.22) !important;
+  border-color: rgba(242,140,40,0.9) !important;
+  color: var(--accent) !important;
+}
+
+/* Optional: slightly stronger hover, but keep active distinct */
+.menu a:hover{
+  background: rgba(200,200,200,0.28) !important;
+}
+</style>
+<style>
+/* === FOOTER (copié depuis une page courante) === */
+
+/* ===== FOOTER AMÉLIORÉ ===== */
+.site-footer{
+  background:#000;
+  margin-top:4rem;
+  padding:1.5rem 0;
+}
+
+.site-footer .footer-inner{
+  max-width:1200px;
+  margin:0 auto;
+  padding:0 1.5rem;
+  display:flex;
+  justify-content:space-between;
+  align-items:center;
+}
+
+.footer-left{
+  display:flex;
+  align-items:center;
+  gap:1rem;
+}
+
+.like-btn{
+  background:none;
+  border:1px solid #f28c28;
+  color:#f28c28;
+  padding:0.4rem 0.8rem;
+  cursor:pointer;
+}
+
+.social-icons a{
+  color:#f28c28;
+  font-size:1.1rem;
+  text-decoration:none;
+  margin-right:0.6rem;
+}
+
+.footer-right .buy-btn{
+  background:#f28c28;
+  color:#000;
+  padding:0.6rem 1.2rem;
+  text-decoration:none;
+  font-weight:500;
+}
+
+
+
+/* ===== FOOTER AMÉLIORÉ v2 ===== */
+.site-footer{
+  background:#000;
+  margin-top:4rem;
+  padding:1.6rem 0;
+}
+
+.site-footer .footer-inner{
+  max-width:1200px;
+  margin:0 auto;
+  padding:0 1.5rem;
+  display:flex;
+  justify-content:space-between;
+  align-items:center;
+}
+
+.footer-left{
+  display:flex;
+  align-items:center;
+  gap:1.2rem;
+}
+
+.like-btn{
+  background:none;
+  border:1px solid #f28c28;
+  color:#f28c28;
+  padding:0.35rem 0.7rem;
+  cursor:pointer;
+  font-size:0.9rem;
+}
+
+/* Social icons as round glyphs */
+.social-icons a{
+  display:inline-flex;
+  align-items:center;
+  justify-content:center;
+  width:28px;
+  height:28px;
+  border-radius:50%;
+  border:1px solid #f28c28;
+  color:#f28c28;
+  font-size:0.85rem;
+  font-weight:600;
+  text-decoration:none;
+}
+
+/* Buy button: grey relief, orange text */
+.footer-right .buy-btn{
+  background:linear-gradient(#3a3a3a, #1f1f1f);
+  color:#f28c28;
+  padding:0.55rem 1.2rem;
+  text-decoration:none;
+  font-weight:500;
+  border-radius:3px;
+  box-shadow:0 2px 4px rgba(0,0,0,0.6);
+}
+
+
+
+.social-icons .icon{
+  display:inline-flex;
+  align-items:center;
+  justify-content:center;
+  width:32px;
+  height:32px;
+  border-radius:50%;
+  border:1px solid #f28c28;
+  margin-right:0.5rem;
+}
+.social-icons svg{
+  width:16px;
+  height:16px;
+  fill:#f28c28;
+}
+
+
+
+/* --- CORRECTION : IMAGE DE FOND JUSQU'AU FOOTER --- */
+main{
+  margin-bottom: 0 !important;
+  padding-bottom: 0 !important;
+}
+
+.site-footer{
+  margin-top: 0 !important;
+}
+
+
+
+/* ===== FOOTER AMÉLIORÉ ===== */
+.site-footer{
+  background:#000;
+  margin-top:4rem;
+  padding:1.5rem 0;
+}
+
+.site-footer .footer-inner{
+  max-width:1200px;
+  margin:0 auto;
+  padding:0 1.5rem;
+  display:flex;
+  justify-content:space-between;
+  align-items:center;
+}
+
+.footer-left{
+  display:flex;
+  align-items:center;
+  gap:1rem;
+}
+
+.like-btn{
+  background:none;
+  border:1px solid #f28c28;
+  color:#f28c28;
+  padding:0.4rem 0.8rem;
+  cursor:pointer;
+}
+
+.social-icons a{
+  color:#f28c28;
+  font-size:1.1rem;
+  text-decoration:none;
+  margin-right:0.6rem;
+}
+
+.footer-right .buy-btn{
+  background:#f28c28;
+  color:#000;
+  padding:0.6rem 1.2rem;
+  text-decoration:none;
+  font-weight:500;
+}
+
+
+
+/* ===== FOOTER AMÉLIORÉ v2 ===== */
+.site-footer{
+  background:#000;
+  margin-top:4rem;
+  padding:1.6rem 0;
+}
+
+.site-footer .footer-inner{
+  max-width:1200px;
+  margin:0 auto;
+  padding:0 1.5rem;
+  display:flex;
+  justify-content:space-between;
+  align-items:center;
+}
+
+.footer-left{
+  display:flex;
+  align-items:center;
+  gap:1.2rem;
+}
+
+.like-btn{
+  background:none;
+  border:1px solid #f28c28;
+  color:#f28c28;
+  padding:0.35rem 0.7rem;
+  cursor:pointer;
+  font-size:0.9rem;
+}
+
+/* Social icons as round glyphs */
+.social-icons a{
+  display:inline-flex;
+  align-items:center;
+  justify-content:center;
+  width:28px;
+  height:28px;
+  border-radius:50%;
+  border:1px solid #f28c28;
+  color:#f28c28;
+  font-size:0.85rem;
+  font-weight:600;
+  text-decoration:none;
+}
+
+/* Buy button: grey relief, orange text */
+.footer-right .buy-btn{
+  background:linear-gradient(#3a3a3a, #1f1f1f);
+  color:#f28c28;
+  padding:0.55rem 1.2rem;
+  text-decoration:none;
+  font-weight:500;
+  border-radius:3px;
+  box-shadow:0 2px 4px rgba(0,0,0,0.6);
+}
+
+
+
+/* --- CORRECTION : IMAGE DE FOND JUSQU'AU FOOTER --- */
+main{
+  margin-bottom: 0 !important;
+  padding-bottom: 0 !important;
+}
+
+.site-footer{
+  margin-top: 0 !important;
+}
+
+</style>
+<style>
+/* === PATCH DEMANDÉ : UNIQUEMENT CES DEUX POINTS === */
+
+/* 1) éclaircir le fond (déjà fait via remplacement du gradient ci-dessus) */
+
+/* 2) supprimer le cadre autour de la couverture */
+.hero > .card:first-child{
+  background: transparent !important;
+  border: none !important;
+  box-shadow: none !important;
+  padding: 0 !important;
+}
+</style>
+<style>
+/* === Footer fixe (demandé) === */
+.site-footer, footer.site-footer{
+  position: fixed;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 9999;
+}
+
+/* Évite que le contenu passe sous le footer */
+body{
+  padding-bottom: 110px;
+}
+</style>
 </head>
-
 <body>
 <header>
-  <div class="nav">
-    <div class="title"><a href="./">Le Testament d’Azénor</a></div>
-
-    <nav aria-label="Navigation" class="menu">
-      <a href="lieux-du-roman.html">Lieux</a>
-      <a href="personnages.html">Personnages</a>
-      <a href="livre-des-conquetes.html">Conquêtes</a>
-      <a href="veritable-legende-azenor.html">La légende</a>
-      <a href="bibliographie.html">Bibliographie</a>
-      <a href="making-off.html">making of</a>
-      <a href="contact.html">Contact</a>
-    </nav>
-
-    <!-- English link (restored) -->
-    <div aria-label="Choix de la langue" class="lang">
-      <a href="en/index.html" title="English version">🇬🇧</a>
-    </div>
-  </div>
+<div class="nav">
+<div class="title"></div>
+<nav aria-label="Navigation" class="menu">
+<a href="lieux-du-roman.html">Lieux</a>
+<a href="personnages.html">Personnages</a>
+<a href="livre-des-conquetes.html">Conquêtes</a>
+<a href="veritable-legende-azenor.html">La légende</a>
+<a href="bibliographie.html">Bibliographie</a>
+<a href="making-off.html">making of</a>
+<a href="contact.html">Contact</a>
+</nav>
+<div aria-label="Choix de la langue" class="lang">
+<a href="en/index.html" title="English version">🇬🇧</a>
+</div>
+</div>
 </header>
-
 <main>
-  <section class="hero">
-    <div class="cover-wrap">
-      <img alt="Couverture du livre Le Testament d’Azénor" class="cover" src="images/accueil/couverture.jpg"/>
-    </div>
-
-    <div class="card">
-      <h1>Azénor – héroïne du roman <em>Le Testament d’Azénor</em></h1>
-
-      <div class="intro">Azénor est le personnage central du roman historique <em>Le Testament d’Azénor</em>, écrit par Alain Bertrand et publié aux éditions L’Harmattan.
-
-De Brest à l’île d’Ouessant, des îles d’Aran aux rivages sauvages de Bréhat, ce roman plonge dans la fabuleuse légende d’Azénor et de son fils Budoc, entre histoire et mystère.
+<section class="hero">
+<div class="card">
+<img alt="Couverture du livre Le Testament d’Azénor" class="cover" src="images/accueil/couverture.jpg"/>
+</div>
+<div class="card">
+<h1>Azénor – héroïne du roman <em>Le Testament d’Azénor</em></h1>
+<p class="seo-intro">Azénor est le personnage central du roman historique <em>Le Testament d’Azénor</em>, écrit par Alain Bertrand.</p>
+<div class="intro">De Brest à l’île d’Ouessant, des îles d’Aran aux rivages sauvages de Bréhat, ce roman plonge dans la fabuleuse légende d’Azénor et de son fils Budoc, entre histoire et mystère.
 
 Accusée d’adultère, la jeune princesse Azénor est condamnée à dériver sur l’océan. Son fils Budoc naît au cœur des îles d’Aran et grandit sous la protection de saint Enda, dans une école monastique où se forgent les grands esprits de son temps. Devenu moine à son tour, il ramènera en Armorique l’héritage de son maître et fondera sur l’île de Lavrec une école où s’épanouiront savoir et foi.
 
 Mais au centre de cette fresque historique se trouve un manuscrit, rédigé par Tadhgán l’Irlandais, ancien druide devenu moine et précepteur d’Azénor. Un texte qui renferme une vérité capable de bouleverser les certitudes et d’attiser les convoitises. Trahisons, rivalités et luttes d’influence s’entrelacent autour de ces pages interdites, tandis que l’avenir de la Bretagne et de l’Irlande se dessine dans l’ombre des monastères et des prophéties.
 
 S’appuyant sur les Vies des Saints de Bretagne et d’Irlande, ce roman historique, aux allures de polar médiéval, mêle réalité et légende dans une épopée où le savoir peut être un héritage… ou une malédiction.</div>
-    </div>
-  </section>
+<div class="actions">
+</div>
+</div>
+</section>
 </main>
+<script>
+// Set active state on the current page link in the menu (no HTML changes needed)
+window.addEventListener('DOMContentLoaded', () => {
+  const links = document.querySelectorAll('.menu a[href]');
+  if (!links.length) return;
 
+  const current = (location.pathname.split('/').pop() || 'index_ok.html').toLowerCase();
+  links.forEach(a => {
+    const href = (a.getAttribute('href') || '').split('?')[0].split('#')[0].toLowerCase();
+    const target = href.split('/').pop();
+    if (target && target === current) {
+      a.setAttribute('aria-current', 'page');
+      a.classList.add('active');
+    }
+  });
+});
+</script>
 <footer class="site-footer">
-  <div class="footer-inner">
-    <div class="social-icons">
-      <!-- LinkedIn -->
-      <a class="icon" href="https://www.linkedin.com/sharing/share-offsite/?url=https://azenor.org/"
-         rel="noopener" target="_blank" title="LinkedIn">
-        <svg aria-hidden="true" viewBox="0 0 24 24">
-          <path d="M4.98 3.5C4.98 4.88 3.87 6 2.5 6S0 4.88 0 3.5 1.11 1 2.5 1s2.48 1.12 2.48 2.5zM.5 8h4V24h-4V8zM8 8h3.8v2.2h.1c.5-1 1.8-2.2 3.8-2.2 4 0 4.7 2.6 4.7 6V24h-4v-7.8c0-1.9 0-4.2-2.6-4.2s-3 2-3 4v8H8V8z"></path>
-        </svg>
-      </a>
-
-      <!-- X -->
-      <a class="icon" href="https://twitter.com/intent/tweet?url=https://azenor.org/"
-         rel="noopener" target="_blank" title="X">
-        <svg aria-hidden="true" viewBox="0 0 24 24">
-          <path d="M18.24 2H21l-6.6 7.55L22 22h-6.6l-4.7-6.1L5.4 22H2.6l7.1-8.1L2 2h6.7l4.3 5.6L18.24 2z"></path>
-        </svg>
-      </a>
-
-      <!-- Facebook -->
-      <a class="icon" href="https://www.facebook.com/sharer/sharer.php?u=https://azenor.org/"
-         rel="noopener" target="_blank" title="Facebook">
-        <svg aria-hidden="true" viewBox="0 0 24 24">
-          <path d="M22 12a10 10 0 1 0-11.6 9.9v-7H7.9v-2.9h2.5V9.8c0-2.5 1.5-3.9 3.8-3.9 1.1 0 2.2.2 2.2.2v2.4h-1.2c-1.2 0-1.6.8-1.6 1.5v1.8h2.8l-.4 2.9h-2.4v7A10 10 0 0 0 22 12z"></path>
-        </svg>
-      </a>
-    </div>
-
-    <div class="footer-right">
-      <a class="buy-btn" href="achat.html">Acheter le livre</a>
-    </div>
-  </div>
+<div class="footer-inner">
+<div class="footer-left">
+<div class="social-icons">
+<!-- LinkedIn -->
+<a class="icon" href="https://www.linkedin.com/sharing/share-offsite/?url=https://azenor.netlify.app/contact" rel="noopener" target="_blank" title="LinkedIn">
+<svg aria-hidden="true" viewbox="0 0 24 24">
+<path d="M4.98 3.5C4.98 4.88 3.87 6 2.5 6S0 4.88 0 3.5 1.11 1 2.5 1s2.48 1.12 2.48 2.5zM.5 8h4V24h-4V8zM8 8h3.8v2.2h.1c.5-1 1.8-2.2 3.8-2.2 4 0 4.7 2.6 4.7 6V24h-4v-7.8c0-1.9 0-4.2-2.6-4.2s-3 2-3 4v8H8V8z"></path>
+</svg>
+</a>
+<!-- X -->
+<a class="icon" href="https://twitter.com/intent/tweet?url=https://azenor.netlify.app/contact" rel="noopener" target="_blank" title="X">
+<svg aria-hidden="true" viewbox="0 0 24 24">
+<path d="M18.24 2H21l-6.6 7.55L22 22h-6.6l-4.7-6.1L5.4 22H2.6l7.1-8.1L2 2h6.7l4.3 5.6L18.24 2z"></path>
+</svg>
+</a>
+<!-- Facebook -->
+<a class="icon" href="https://www.facebook.com/sharer/sharer.php?u=https://azenor.netlify.app/contact" rel="noopener" target="_blank" title="Facebook">
+<svg aria-hidden="true" viewbox="0 0 24 24">
+<path d="M22 12a10 10 0 1 0-11.6 9.9v-7H7.9v-2.9h2.5V9.8c0-2.5 1.5-3.9 3.8-3.9 1.1 0 2.2.2 2.2.2v2.4h-1.2c-1.2 0-1.6.8-1.6 1.5v1.8h2.8l-.4 2.9h-2.4v7A10 10 0 0 0 22 12z"></path>
+</svg>
+</a>
+</div>
+</div>
+<div class="footer-right">
+<a class="buy-btn" href="achat.html">Acheter le livre</a>
+</div>
+</div>
 </footer>
-
 </body>
 </html>
