--- a/index.html
+++ b/index.html
@@ -527,7 +527,7 @@ body{
 </div>
 <div class="card">
 <h1>Azénor – héroïne du roman <em>Le Testament d’Azénor</em></h1>
-<p class="seo-intro">Azénor est le personnage central du roman historique <em>Le Testament d’Azénor</em>, écrit par Alain Bertrand.</p>
+<div class="seo-intro" style="margin:0 0 12px; color:var(--muted); font-size:1.02rem; line-height:1.6;">Azénor est le personnage central du roman historique <em>Le Testament d’Azénor</em>, écrit par Alain Bertrand.</div>
 <div class="intro">De Brest à l’île d’Ouessant, des îles d’Aran aux rivages sauvages de Bréhat, ce roman plonge dans la fabuleuse légende d’Azénor et de son fils Budoc, entre histoire et mystère.
 
 Accusée d’adultère, la jeune princesse Azénor est condamnée à dériver sur l’océan. Son fils Budoc naît au cœur des îles d’Aran et grandit sous la protection de saint Enda, dans une école monastique où se forgent les grands esprits de son temps. Devenu moine à son tour, il ramènera en Armorique l’héritage de son maître et fondera sur l’île de Lavrec une école où s’épanouiront savoir et foi.
