--- a/index.html
+++ b/index.html
@@ -195,6 +195,9 @@ h1{
   border-radius:3px;
   box-shadow:0 2px 4px rgba(0,0,0,0.6);
 }
+      body{
+  padding-bottom: 140px;
+}
 </style>
 </head>
 
